--- a/frontend/src/styles/comman.css
+++ b/frontend/src/styles/comman.css
@@ -2,7 +2,7 @@
     /* Main colors */
     --main-color: #393E41;
     --second-color: #D3D0CB;
-    --bg-color: #FFFAFF;
+    --bg-color:#fafafa;
     --third-color: #E2C044;
     --fourth-color: #587B7F;
     --fifth-color: #1E2019;
