--- a/frontend/src/styles/dashboard.css
+++ b/frontend/src/styles/dashboard.css
@@ -1,4 +1,5 @@
 @import url('./comman.css');
+@import url('https://fonts.cdnfonts.com/css/bite-chocolate');
 *{
     box-sizing: border-box;
 }
@@ -6,4 +7,18 @@
     display: grid;
     grid-template-columns: 20% 80%;
     background-color: var(--bg-color);
+}
+.side-bar{
+    height: 100vh;
+}
+.logo{
+    padding: 10px;
+    font-family: 'Bite Chocolate';
+    font-weight: bolder;
+}
+.admin-nav{
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
