--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
-/* @import url('styles/common.css'); */
-
+* {
+    box-sizing: border-box;
+}
 #root {
     max-width: 1280px;
     margin: 0 auto;
