--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,8 @@
 }
 #root {
     max-width: 1280px;
+    height: 100vh;
+    /* min-height: 100vh; */
     margin: 0 auto;
     text-align: center;
 }
