--- a/frontend/src/styles/dashboard.css
+++ b/frontend/src/styles/dashboard.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.cdnfonts.com/css/bite-chocolate');
 .dashboard-main{
     width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 20% 80%;
     background-color: var(--bg-color);
@@ -14,6 +15,9 @@
     font-family: 'Bite Chocolate';
     font-weight: bolder;
 }
+.side-menu{
+    height: calc(100% - 3.5rem);
+}
 .admin-nav{
     background-color: white;
     padding: 0 50px;
@@ -25,14 +29,26 @@
     background-color: #305272;
 }
 .statistics{
+    padding: 20px;
     display: flex;
     flex-wrap: wrap;
-    gap: 40px;
+    justify-content: space-between;
+    width: 100%;
 }
-.statistics div{
-    width: 100px;
-    height: 80px;
-    background-color: aqua;
+.statistics>div{
+    width: calc(33% - 5px);
+    min-width: 100px;
+    height: 120px;
+    border-radius: 10px;
+}
+.statistics>div:first-child{
+    background-color: #dae9f0;
+}
+.statistics>div:nth-child(2){
+    background-color: #e4f599;
+}
+.statistics>div:last-child{
+    background-color: #dcd2ed;
 }
 
 .dark-theme{
