--- a/frontend/src/styles/dashboard.css
+++ b/frontend/src/styles/dashboard.css
@@ -51,6 +51,10 @@
     background-color: #dcd2ed;
 }
 
+.dash-content{
+    height: calc(100% - 2.5rem);
+}
+
 .dark-theme{
     background-color: #001529;
     h1,h2,h3,h4,h5,p,svg{
