created bike storing feature

--- a/frontend/src/styles/dashboard.css
+++ b/frontend/src/styles/dashboard.css
@@ -80,3 +80,13 @@
     }
 }
 
+.dark-form{
+    label{
+        color: rgb(209, 213, 219) !important;
+    }
+    input, input:active{
+        background-color: #305272;
+    }
+    
+}
+
