--- a/frontend/src/styles/landing.css
+++ b/frontend/src/styles/landing.css
@@ -36,11 +36,19 @@ nav {
     display: none;
 }
 
-
-
-
 .navbar-cart-icon {
     font-size: 1.15rem;
+}
+.primary-button {
+    padding: 0.9rem 1.75rem;
+    background-color: white;
+    outline: none;
+    border: none;
+    border-radius: 5rem;
+    font-size: 1.1rem;
+    cursor: pointer;
+    font-weight: 600;
+    transition: 0.2s;
 }
 
 .primary-button:hover {
@@ -62,13 +70,13 @@ nav {
     position: absolute;
     top: -100px;
     right: -170px;
-    z-index: -2;
     max-width: 700px;
 }
 
 .home-image-section {
     max-width: 600px;
     flex: 1;
+    z-index: 10;
 }
 
 .home-text-section {
@@ -129,12 +137,13 @@ nav {
 .about-background-image-container {
     position: absolute;
     left: -150px;
-    z-index: -2;
+    z-index: 0;
 }
 
 .about-section-image-container {
     flex: 0.9;
     margin-right: 1rem;
+    z-index: 10;
 }
 
 .about-section-text-container {
@@ -423,17 +432,6 @@ nav {
     .primary-subheading {
         text-align: center;
     }
-
-    .watch-video-button {
-        margin-left: 0rem !important;
-        margin-top: 1rem;
-        font-size: 1rem !important;
-    }
-
-    .watch-video-button svg {
-        margin-right: 0.5rem !important;
-    }
-
     .about-section-image-container {
         margin-right: 0rem !important;
     }
