userslist and bikeslist

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,6 +27,7 @@
     padding: 10px;
     overflow: hidden;
     color: white;
+    display: flex;
 }
 .stats-card-icon{
     transform: rotate(-20deg);
