--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,3 +37,29 @@
     opacity: 0.6;
 
 }
+.thumbnail{
+    background-color: #ff5f01;
+    width: 100%;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 100px;
+}
+.thumbnail img{
+    margin-top: -80px;
+    margin-bottom: 20px;
+    filter: drop-shadow(3px 20px 15px rgba(0,0,0,0.5));
+}
+.search{
+    position: absolute;
+    top: 73%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border-radius: 10px;
+}
+.card-img{
+    background-color: #ff5f01;
+    border-radius: 0;
+}
