--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -55,7 +55,7 @@
 }
 .search{
     position: absolute;
-    top: 73%;
+    bottom: -8%;
     left: 50%;
     transform: translate(-50%,-50%);
     border-radius: 10px;
