--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -10,7 +10,7 @@ section::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0)), url('../assets/login-.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0)), url('../assets/login-bg.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
